# MAP_Image-Creation

./: .gitignore  AGENTS.md  CMakeLists.txt  colormapdialog.cpp  colormapdialog.h  geo_tiff_loader.cpp  geo_tiff_loader.h  gif_exporter.cpp  gif_exporter.h  keydialog.h  main.cpp  mainwindow.cpp  mainwindow.h  map.html  resampledialog.cpp  resampledialog.h  shapefile_loader.cpp  shapefile_loader.h  vcpkg.json
.github/workflows/: build-windows.yml  package.yml
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: geo_tiff_loader.cpp  geo_tiff_loader.h  raster_renderer.cpp  raster_renderer.h  shapefile_loader.cpp  shapefile_loader.h  tiff_utils.cpp  tiff_utils.h
src/dialogs/: colormapdialog.cpp  colormapdialog.h  keydialog.cpp
src/export/: gif_exporter.cpp  gif_exporter.h
